<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorPrimaryLight">

            <TextView
                android:id="@+id/kanjiSymbolView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/default_kana_symbol"
                android:textSize="200sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/kanjiKunView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="20dp"
            android:text="@string/default_kun"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/kanjiOnView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/default_on"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/kanjiMeaningsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/default_meanings"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/kanjiStrokeCountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/default_stroke_count"
            android:textSize="30sp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/back_button_text"
            android:textColor="@color/colorAccent"
            android:textSize="30sp" />
    </LinearLayout>
</ScrollView>
