<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kris.yapanap.fragments.HiraganaFragment"
        android:label="@string/title_hiragana"
        tools:layout="@layout/fragment_hiragana" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.kris.yapanap.fragments.KatakanaFragment"
        android:label="@string/title_katakana"
        tools:layout="@layout/fragment_katakana" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.kris.yapanap.fragments.KanjiFragment"
        android:label="@string/title_kanji"
        tools:layout="@layout/fragment_kanji" />
</navigation>